--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,14 @@
+td {
+    padding-left: 5px;
+    padding-right: 5px;
+}
 
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.header{ 
+    padding: 30px;
+    margin-bottom: 30px;
+    font-size: 16px;
+    font-weight: 200;
+    line-height: 1.1428571435;
+    color: inherit;
+    background-color: #eee
+}
